Updated examples to use new library and updated EBS.

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html>
 
 <head>
+    <title>Heat Demos</title>
 
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css"
@@ -73,8 +73,6 @@
         }
     </style>
 
-    <title>Heat</title>
-
 </head>
 
 <body>
@@ -94,7 +92,7 @@
                 <a class="btn btn-dark btn-lg" href="/kissingbooth/?demo=true" target="demo">Kiss</a>
                 <a class="btn btn-dark btn-lg" href="/sequence/?demo=true" target="demo">Sequence</a>
                 <a class="btn btn-dark btn-lg" href="/baby/?demo=true" target="demo">Baby</a>
-                <a class="btn btn-dark btn-lg" href="/warp/?demo=true" target="demo">Warp</a>
+                <a class="btn btn-dark btn-lg" href="/paint/?demo=true" target="demo">Paint</a>
             </div>
         </div>
     </div>
@@ -105,23 +103,22 @@
         <iframe name="demo"></iframe>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"
-        integrity="sha384-7aThvCh9TypR7fIc2HV4O/nFMVCBwyIUKL8XCtKE+8xgCgl/PQGuFsvShjr74PBp"
-        crossorigin="anonymous"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script src="/js/heat.js"></script>
 
     <script>
+        "use strict";
 
-        (function () {
+        // Initialize Heat.
+        {
+            const params = (new URL(document.location)).searchParams;
+            const channel = params.get("channel") ||
+                params.get("channelId") ||
+                params.get("channelID") ||
+                97032862;
+
+            const heat = new Heat(channel);
 
             heat.addEventListener('click', (e) => {
-
-
                 const x = parseInt(e.detail.x * window.innerWidth);
                 const y = parseInt(e.detail.y * window.innerHeight);
 
@@ -133,9 +130,7 @@
 
                 element.click();
             });
-
-        })();
-
+        }
     </script>
 
 </body>
