--- a/kissingbooth/index.html
+++ b/kissingbooth/index.html
@@ -1,39 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kissing Booth</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/css/screen.css" media="screen" />
+
     <style>
-        body,
-        html {
-            height: 100%;
-        }
-
-        body {
-            background-color: rgba(0, 0, 0, 0);
-            overflow: hidden;
-            margin: 0;
-            padding: 0;
-        }
-
-        body.demo {
-            background: #2b3990;
-            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
-        }
-
-        #main {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            user-select: none;
-        }
-
-        #main.demo {
+        body.demo #main {
             background: url('textures/background.svg') no-repeat center bottom fixed;
             background-size: cover;
         }
@@ -41,130 +16,103 @@
 </head>
 
 <body>
-
     <div id="main"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.0.0-rc/pixi.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.0.2/browser/pixi.min.js"></script>
 
+    <script src="/js/demo.js"></script>
     <script src="/js/heat.js"></script>
 
     <script>
+        "use strict";
 
-        (function () {
-
-            let app;
-            let sprites;
-
-            // Demo background
-
+        // Initialize Heat.
+        {
             const params = (new URL(document.location)).searchParams;
-            const demo = params.get("demo") || false;
+            const channel = params.get("channel") ||
+                params.get("channelId") ||
+                params.get("channelID") ||
+                97032862;
 
-            if (demo) {
-
-                document.getElementById("main").classList.add('demo');
-            }
-
-            // Event handlers.
-
-            document.addEventListener("click", function (event) {
-
-                const normalizedX = (event.clientX * 1.0 / window.innerWidth).toPrecision(3);
-                const normalizedY = (event.clientY * 1.0 / window.innerHeight).toPrecision(3);
-
-                drawClick(normalizedX, normalizedY);
-
-            });
-
+            const heat = new Heat(channel);
             heat.addEventListener('click', (e) => {
                 drawClick(e.detail.x, e.detail.y);
             });
+        }
 
-            // DOM elements.
+        // Main container.
+        let main = document.getElementById('main');
 
-            mainDiv = document.getElementById('main');
+        // Pixi setup.
+        let app = new PIXI.Application({
+            resizeTo: main,
+            resolution: devicePixelRatio,
+            autoDensity: true,
+            transparent: true
+        });
+        main.appendChild(app.view);
 
-            // Pixi setup.
+        // Container for kisses.
+        let sprites = new PIXI.ParticleContainer(10000, {
+            scale: true,
+            position: true,
+            rotation: true,
+            uvs: true
+        });
+        sprites.blendMode = PIXI.BLEND_MODES.SCREEN;
+        app.stage.addChild(sprites);
 
-            app = new PIXI.Application({
-                width: 300,
-                height: 300,
-                //backgroundColor: 0x0,
-                resizeTo: mainDiv,
-                autoDensity: true,
-                resolution: devicePixelRatio,
-                transparent: true
-            });
-            document.getElementById('main').appendChild(app.view);
+        // Kiss spritesheet. 
+        let kissesTexture = PIXI.BaseTexture.from("sprites/kisses.png");
+        let kisses = [
+            new PIXI.Texture(kissesTexture, new PIXI.Rectangle(0, 0, 128, 128)),
+            new PIXI.Texture(kissesTexture, new PIXI.Rectangle(128, 0, 128, 128)),
+            new PIXI.Texture(kissesTexture, new PIXI.Rectangle(0, 128, 128, 128)),
+            new PIXI.Texture(kissesTexture, new PIXI.Rectangle(128, 128, 128, 128))
+        ];
 
-            sprites = new PIXI.ParticleContainer(10000, {
-                scale: true,
-                position: true,
-                rotation: true,
-                uvs: true
-            });
-            sprites.blendMode = PIXI.BLEND_MODES.SCREEN;
-            app.stage.addChild(sprites);
+        // Draw clicks.
+        function drawClick(clickX, clickY) {
+            const screenX = parseInt(clickX * main.clientWidth);
+            const screenY = parseInt(clickY * main.clientHeight);
 
-            var mySpriteSheetImage = PIXI.BaseTexture.from("sprites/kisses.png");
+            const kissIndex = Math.floor(Math.random() * kisses.length);
+            const kiss = PIXI.Sprite.from(kisses[kissIndex]);
 
-            let kisses = [
-                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(0, 0, 128, 128)),
-                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(128, 0, 128, 128)),
-                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(0, 128, 128, 128)),
-                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(128, 128, 128, 128))
-            ];
+            kiss.anchor.set(0.5);
+            kiss.x = screenX;
+            kiss.y = screenY;
+            kiss.rotation = (Math.random() * (Math.PI / 2.0)) - (Math.PI / 4.0);
+            kiss.tint = 0xc0c0c0 + (0x404040 * Math.random());
 
-            // Draw clicks.
+            kiss.birth = Date.now();
+            kiss.death = kiss.birth + 1000;
 
-            function drawClick(clickX, clickY) {
+            sprites.addChild(kiss);
+        }
 
-                const screenX = parseInt(clickX * mainDiv.clientWidth);
-                const screenY = parseInt(clickY * mainDiv.clientHeight);
+        // Render loop.
+        app.ticker.add((delta) => {
+            for (let i = sprites.children.length - 1; i >= 0; i--) {
+                let kiss = sprites.getChildAt(i);
+                let age = (Date.now() - kiss.birth) / (kiss.death - kiss.birth);
 
-                const kissIndex = Math.floor(Math.random() * kisses.length);
-                const kiss = PIXI.Sprite.from(kisses[kissIndex]);
+                if (age >= 1) {
+                    kiss.destroy();
+                } else {
+                    kiss.scale.set((1 - age));
+                }
+            };
+        });
 
-                kiss.anchor.set(0.5);
-                kiss.x = screenX;
-                kiss.y = screenY;
-                kiss.rotation = (Math.random() * (Math.PI / 2.0)) - (Math.PI / 4.0);
-                kiss.tint = 0xc0c0c0 + (0x404040 * Math.random());
+        // Handle local clicks.
+        document.addEventListener("click", function (event) {
+            const normalizedX = (event.clientX * 1.0 / window.innerWidth).toPrecision(3);
+            const normalizedY = (event.clientY * 1.0 / window.innerHeight).toPrecision(3);
 
-                kiss.birth = Date.now();
-                kiss.death = kiss.birth + 1000;
-
-                sprites.addChild(kiss);
-            }
-
-            // Render loop.
-
-            let clock = 0;
-
-            app.ticker.add(function (delta) {
-
-                for (let i = sprites.children.length - 1; i >= 0; i--) {
-                    let kiss = sprites.getChildAt(i);
-
-                    let age = (Date.now() - kiss.birth) / (kiss.death - kiss.birth);
-
-                    if (age >= 1) {
-                        kiss.destroy();
-                    } else {
-                        kiss.scale.set((1 - age));
-                    }
-
-
-                };
-
-                clock += delta;
-            });
-
-        })();
-
+            drawClick(normalizedX, normalizedY);
+        });
     </script>
-
 </body>
 
 </html>
