--- a/paint/index.html
+++ b/paint/index.html
@@ -1,44 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
+    <title>Paint</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-
-    <style>
-        body,
-        html {
-            height: 100%;
-        }
-
-        body {
-            background-color: rgba(0, 0, 0, 0);
-            overflow: hidden;
-            margin: 0;
-            padding: 0;
-        }
-
-        body.demo {
-            background: #2b3990;
-            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
-        }
-
-        #main {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            user-select: none;
-        }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="/css/screen.css" media="screen" />
 </head>
 
 <body>
+    <div id="main"></div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.0.2/browser/pixi.min.js"></script>
+
+    <script src="/js/demo.js"></script>
+    <script src="/js/heat.js"></script>
 
     <script id="fragment" type="shader">
 
@@ -69,8 +46,7 @@
             g.x  = a0.x  * x0.x  + h.x  * x0.y;
             g.yz = a0.yz * x12.xz + h.yz * x12.yw;
             return 130.0 * dot(m, g);
-          }
-        //
+        }
 
         precision highp float;
 
@@ -91,201 +67,167 @@
             //vec4 background = vec4(0,.15,.2,1);
             //color = mix(color, background, .05);
             gl_FragColor = color;
-
         }
-    
     </script>
 
+    <script>
+        "use strict";
 
-    <div id="main"></div>
+        // Initialize Heat.
+        {
+            const params = (new URL(document.location)).searchParams;
+            const channel = params.get("channel") ||
+                params.get("channelId") ||
+                params.get("channelID") ||
+                97032862;
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.0.0-rc/pixi.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.min.js"></script>
+            const heat = new Heat(channel);
+            heat.addEventListener('click', (e) => {
+                drawClick(e.detail.x, e.detail.y, e.detail.id);
+            });
+        }
 
-    <script src="/js/heat.js"></script>
+        // Main container.
+        let main = document.getElementById('main');
+
+        // Click handler.
+        let ids = new Map();
+        function drawClick(x, y, id) {
+            if (!ids.has(id)) {
+                let brush = new Brush(x, y);
+                ids.set(id, brush);
+                sprites.addChild(brush);
+            } else {
+                let brush = ids.get(id);
+                brush.update(x, y);
+            }
+        }
+
+        // Pixi.js setup.
+        const app = new PIXI.Application({
+            transparent: true,
+            resizeTo: main,
+            autoDensity: true,
+            resolution: devicePixelRatio,
+        });
+        document.getElementById('main').appendChild(app.view);
+
+        // Sprite container.
+        const sprites = new PIXI.ParticleContainer(10000, {
+            scale: true,
+            position: true,
+            rotation: true,
+            uvs: true,
+        });
+        app.stage.addChild(sprites);
+
+        // Render texture setup.
+        const renderTexture = PIXI.RenderTexture.create(app.renderer.width, app.renderer.height, PIXI.SCALE_MODES.LINEAR, devicePixelRatio);
+        const renderTextureSprite = new PIXI.Sprite(renderTexture);
+        app.stage.addChild(renderTextureSprite);
+
+        // Shader setup.
+        const fragmentShader = document.getElementById("fragment").innerHTML
+        const simpleShader = new PIXI.Filter(null, fragmentShader);
+
+        renderTextureSprite.filters = [simpleShader]
+
+        // Render loop.
+        let clock = 0;
+        app.ticker.add(function (delta) {
+
+            simpleShader.uniforms.time = clock;
+
+            ids.forEach(function (brush, id) {
+                brush.draw(delta);
+                if (Date.now() - brush.lastUpdate > 10 * 1000) {
+                    brush.destroy();
+                    ids.delete(id);
+                }
+            });
+
+            app.renderer.render(app.stage, renderTexture, false);
+
+            clock += delta;
+        });
+
+        // Local clicks.
+        document.addEventListener("click", (event) => {
+            const normalizedX = (event.clientX * 1.0 / window.innerWidth).toPrecision(3);
+            const normalizedY = (event.clientY * 1.0 / window.innerHeight).toPrecision(3);
+
+            drawClick(normalizedX, normalizedY, -1);
+        });
+
+        // Handle window resize.
+        window.addEventListener('resize', () => {
+            renderTextureSprite.width = app.renderer.width;
+            renderTextureSprite.height = app.renderer.height;
+
+            renderTexture.resize(app.renderer.width, app.renderer.height, true);
+        });
+    </script>
 
     <script>
+        // Brush class.
+        class Brush extends PIXI.Sprite {
 
+            constructor(x, y) {
+                super(new PIXI.Texture.from('sprites/particle.png'));
 
-        (function () {
+                this.x = parseInt(x * main.clientWidth);
+                this.y = parseInt(y * main.clientHeight);
+                this.anchor.set(0.5);
 
-            let app, sprites;
-            let ids = new Map();
+                this.tint = "0x" + tinycolor({ h: Math.random() * 360, s: 1, l: .75 }).toHex();
 
-            // Listeners
+                this.target = new PIXI.Point(this.x, this.y);
+                this.seed = Math.random() * 100;
 
-            document.addEventListener("click", function (event) {
+                this.lastUpdate = Date.now();
 
-                const normalizedX = (event.clientX * 1.0 / window.innerWidth).toPrecision(3);
-                const normalizedY = (event.clientY * 1.0 / window.innerHeight).toPrecision(3);
-
-                handleClick(normalizedX, normalizedY, -1);
-
-            });
-
-
-            window.addEventListener('resize', function () {
-                renderTextureSprite.width = app.renderer.width;
-                renderTextureSprite.height = app.renderer.height;
-
-                renderTexture.resize(app.renderer.width, app.renderer.height, true);
-            });
-
-            heat.addEventListener('click', (e) => {
-                handleClick(e.detail.x, e.detail.y, e.detail.id);
-            });
-
-            function handleClick(x, y, id) {
-
-                if (!ids.has(id)) {
-                    let brush = new Brush(x, y);
-                    ids.set(id, brush);
-                    sprites.addChild(brush);
-                } else {
-                    let brush = ids.get(id);
-                    brush.update(x, y);
-                }
-
+                this.clock = 0;
             }
 
-            // Pixi.js
+            update(x, y) {
+                this.lastUpdate = Date.now();
 
-            mainDiv = document.getElementById('main');
-
-            app = new PIXI.Application({
-                width: 300,
-                height: 300,
-                transparent: true,
-                resizeTo: mainDiv,
-                autoDensity: true,
-                resolution: devicePixelRatio,
-            });
-            document.getElementById('main').appendChild(app.view);
-
-            sprites = new PIXI.ParticleContainer(10000, {
-                scale: true,
-                position: true,
-                rotation: true,
-                uvs: true,
-            });
-            //sprites.blendMode = PIXI.BLEND_MODES.SCREEN;
-            app.stage.addChild(sprites);
-
-            //
-
-            const renderTexture = PIXI.RenderTexture.create(app.renderer.width, app.renderer.height, PIXI.SCALE_MODES.LINEAR, devicePixelRatio);
-            const renderTextureSprite = new PIXI.Sprite(renderTexture);
-            //renderTextureSprite.blendMode = PIXI.BLEND_MODES.SCREEN;
-
-            app.stage.addChild(renderTextureSprite);
-
-            // Shader setup.
-
-            const fragmentShader = document.getElementById("fragment").innerHTML
-            const simpleShader = new PIXI.Filter(null, fragmentShader);
-
-            renderTextureSprite.filters = [simpleShader]
-
-            // Render
-
-            let clock = 0;
-
-            app.ticker.add(function (delta) {
-
-                simpleShader.uniforms.time = clock;
-
-                ids.forEach(function (brush, id) {
-                    brush.draw(delta);
-                    if (Date.now() - brush.lastUpdate > 10 * 1000) {
-                        brush.destroy();
-                        ids.delete(id);
-                    }
-                });
-
-                app.renderer.render(app.stage, renderTexture, false);
-
-                clock += delta;
-            });
-
-            // Brush
-
-            class Brush extends PIXI.Sprite {
-
-                constructor(x, y) {
-
-                    super(new PIXI.Texture.from('sprites/particle.png'));
-
-                    this.x = parseInt(x * mainDiv.clientWidth);
-                    this.y = parseInt(y * mainDiv.clientHeight);
-                    this.anchor.set(0.5);
-
-                    this.tint = "0x" + tinycolor({ h: Math.random() * 360, s: 1, l: .75 }).toHex();
-
-                    this.target = new PIXI.Point(this.x, this.y);
-                    this.seed = Math.random() * 100;
-
-                    this.lastUpdate = Date.now();
-
-                    this.clock = 0;
-
-                }
-
-                update(x, y) {
-
-                    this.lastUpdate = Date.now();
-
-                    this.target.x = parseInt(x * mainDiv.clientWidth);
-                    this.target.y = parseInt(y * mainDiv.clientHeight);
-                }
-
-                draw(delta) {
-
-                    let scale = ((Math.sin(this.seed + this.clock / 25)) + 2);
-                    this.scale.set(scale);
-
-                    this.rotation = Math.sin(this.clock) * 2 * Math.PI;
-
-                    //
-
-                    let offset = new PIXI.Point(
-                        (this.target.x - this.x),
-                        (this.target.y - this.y)
-                    );
-
-                    let length = Math.sqrt(offset.x * offset.x + offset.y * offset.y);
-
-                    if (length > 0) {
-
-                        // Normalize
-
-                        offset.x /= length;
-                        offset.y /= length;
-
-                        if (length > 100) length = 100;
-
-                        // Scale offset.
-
-                        offset.x *= .1 * delta * length;
-                        offset.y *= .1 * delta * length;
-
-                        this.x += offset.x;
-                        this.y += offset.y;
-
-                    }
-
-                    //
-                    this.clock += delta;
-
-                }
-
+                this.target.x = parseInt(x * main.clientWidth);
+                this.target.y = parseInt(y * main.clientHeight);
             }
 
-        })();
+            draw(delta) {
+                let scale = ((Math.sin(this.seed + this.clock / 25)) + 2);
+                this.scale.set(scale);
 
+                this.rotation = Math.sin(this.clock) * 2 * Math.PI;
 
+                let offset = new PIXI.Point(
+                    (this.target.x - this.x),
+                    (this.target.y - this.y)
+                );
 
+                let length = Math.sqrt(offset.x * offset.x + offset.y * offset.y);
+
+                if (length > 0) {
+
+                    // Normalize
+                    offset.x /= length;
+                    offset.y /= length;
+
+                    if (length > 100) length = 100;
+
+                    // Scale offset.
+                    offset.x *= .1 * delta * length;
+                    offset.y *= .1 * delta * length;
+
+                    this.x += offset.x;
+                    this.y += offset.y;
+                }
+
+                this.clock += delta;
+            }
+        }
     </script>
 
 </body>
